# bot

./: .breakpoints  English.json  bag.json  boss.json  food.json  item.json  keep_alive.py  main.py  monster.json  pet.json  pyproject.toml  requirements.txt  shop.json  skill.json  weapon.json
.cache/replit/: __replit_disk_meta.json
None/: .json  fight.py  help.py  none.txt  team.py
chatData/: chino1.txt  chino_save.txt
cmds/: Lvup.py  bossCog.py  chat.py  huntCog.py  map.py  myInfo.py  rank.py  rename.py  setCog.py  shop.py  useItem.py
core/: core.py
templates/: alive.html
